@@ -1,3 +1,6 @@
+2022-07-30  Luigi Scarso <luigi.scarso@gmail.com>
+    * Take exception pre/port disc font from wordstart (H.Hagen)
+
 2022-05-23  Luigi Scarso <luigi.scarso@gmail.com>
     * Fixed mp_begin_iteration (H.Hagen)
 
